@@ -19,6 +19,7 @@ FIXES
 * Too big CPU load on FreeBSD and other systems using poll() interface (cejkar)
 * Flexible downtime recorded as unscheduled downtime (John Frickson)
 * Service Flexible downtimes produce 1 notification before entering (John Frickson)
+* Once you "set flap_detection_enabled 0" it should remove flapping state from the host/services page (John Frickson)
 
 4.1.1 - 08/19/2015
 ------------------
